ncbi_tools: doesn't support parallel build (#22621)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69600 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/ncbi_tools/Portfile
+++ b/dports/science/ncbi_tools/Portfile
@@ -16,6 +16,7 @@ checksums       md5 f8de9d7264aed7de1d87d2185df2e07c
 dist_subdir     ${name}/${version}
 worksrcdir
 use_configure   no
+use_parallel_build no
 build.cmd       './ncbi/make/makedis.csh'
 build.target
 set binaries    "Psequin          blastall         dosimple         gil2bin          sbtedit \
