ncbi_tools: remove obsolete/unsupported cflags (#22621)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69601 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/ncbi_tools/Portfile
+++ b/dports/science/ncbi_tools/Portfile
@@ -14,7 +14,10 @@ master_sites    ftp://ftp.ncbi.nlm.nih.gov/toolbox/ncbi_tools/old/20080302
 distfiles       ncbi.tar.gz
 checksums       md5 f8de9d7264aed7de1d87d2185df2e07c
 dist_subdir     ${name}/${version}
-worksrcdir
+extract.mkdir   yes
+
+patchfiles      darwin.ncbi.mk.diff
+
 use_configure   no
 use_parallel_build no
 build.cmd       './ncbi/make/makedis.csh'
