ncbi_tools: disable carbon when building for 64-bit archs (#22621)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69602 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/ncbi_tools/Portfile
+++ b/dports/science/ncbi_tools/Portfile
@@ -17,6 +17,9 @@ dist_subdir     ${name}/${version}
 extract.mkdir   yes
 
 patchfiles      darwin.ncbi.mk.diff
+if {[string match *64* $build_arch]} {
+    patchfiles-append c-toolkit-no-carbon.patch
+}
 
 use_configure   no
 use_parallel_build no
