ncbi_tools: remove binaries which apparently are not being built from list used in destroot (#22916)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69604 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/ncbi_tools/Portfile
+++ b/dports/science/ncbi_tools/Portfile
@@ -25,18 +25,18 @@ use_configure   no
 use_parallel_build no
 build.cmd       './ncbi/make/makedis.csh'
 build.target
-set binaries    "Psequin          blastall         dosimple         gil2bin          sbtedit \
+set binaries    "blastall         dosimple         gil2bin \
 asn2ff           blastall_old     entrcmd          idfetch          seedtop \
-asn2gb           blastcl3         entrez2          impala           seqtest \
+asn2gb           blastcl3         impala           seqtest \
 asn2idx          blastclust       errhdr           indexpub         tbl2asn \
 asn2xml          blastpgp         fa2htgs          makemat          test_regexp \
 asndhuff         cdscan           fastacmd         makeset          testcore \
 asntool          checksub         findspl          megablast        testobj \
 bl2bag.cgi       copymat          formatdb         ncbisort         testval \
-bl2seq           ddv              formatrpsdb      nph-viewgif.cgi  udv \
-blast            debruijn         gene2xml         psiblast.REAL    vecscreen \
-blast.REAL       demo_regexp      getmesh          psiblast_cs.REAL wblast2.REAL \
-blast_cs.REAL    demo_regexp_grep getpub           rpsblast         wblast2_cs.REAL"
+bl2seq           formatrpsdb      nph-viewgif.cgi \
+blast            debruijn         gene2xml         vecscreen \
+demo_regexp      getmesh          wblast2.REAL \
+demo_regexp_grep getpub           rpsblast         wblast2_cs.REAL"
 
 set manpages    "Psequin.1       asnval.1        cleanasn.1      formatdb.1      insdseqget.1    tbl2asn.1 \
 asn2all.1       bl2seq.1        copymat.1       formatrpsdb.1   makemat.1       trna2sap.1 \
