--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 
 name            ghostscript
 version         8.71
-revision        3
+revision        4
 categories      print
 maintainers     takanori openmaintainer
 description     GPL Ghostscript, An interpreter for PostScript and PDF
@@ -23,7 +23,10 @@ distfiles       ${distname}.tar.gz:source \
                 mappingresources4pdf_other-20091208.tar.Z:misc
 patchfiles      patch-base_unix-dll.mak.diff \
                 patch-base_stdpre.h.diff \
-                libpng14-compat.diff
+                libpng14-compat.diff \
+                patch-psi_zfile.c.diff \
+                patch-Makefile.in.diff \
+                patch-doc_Use.htm.diff
 checksums       ${distname}.tar.gz rmd160 efce74cf22cf99b2b1a145df466e79a86e3dfefb \
                 ghostscript-fonts-other-6.0.tar.gz rmd160 ab60dbf71e7d91283a106c3df381cadfe173082f \
                 mappingresources4pdf_2unicode-20091208.tar.Z rmd160 bc1b86e6a5f0e022f88070195eb3e01e167114a7 \
