--- a/dports/lang/ruby/Portfile
+++ b/dports/lang/ruby/Portfile
@@ -4,8 +4,8 @@ PortSystem		1.0
 PortGroup		muniversal 1.0
 
 name			ruby
-version			1.8.7-p299
-revision		1
+version			1.8.7-p302
+revision		0
 
 categories		lang ruby
 maintainers		kimuraw
@@ -17,12 +17,13 @@ long_description	Ruby is the interpreted scripting language for quick \
 					management tasks (as in Perl). It is simple, \
 					straight-forward, extensible, and portable.
 homepage		http://www.ruby-lang.org/
+license			Ruby/GPL
 master_sites	ruby:1.8
 				
 dist_subdir		ruby
-checksums		md5 244439a87d75ab24170a9c2b451ce351 \
-				rmd160 0ea4a05f439b6a2cf4bf53339df48aed329f9e43 \
-				sha1 9c66c6ee21d427b5f3183b6c42beb02aa8618cef
+checksums		md5 a6a9e37079ed8cf8726b455dad3de939 \
+				rmd160 763bc840316cb1080d46445cdc3ca7722d576591 \
+				sha1 d93bd2f1099f3473b496cda2422b27a8da2beb00
 
 use_bzip2		yes
 
@@ -89,7 +90,7 @@ if {[variant_isset universal]} {
 destroot.target	install install-doc
 post-destroot {
 	foreach type {site vendor} {
-		set libdir ${destroot}${prefix}/lib/ruby/${type}_ruby
+		set libdir ${destroot}${prefix}/lib/ruby/1.8
 		xinstall -m 0755 -d ${libdir}
 		
 		# special file for installation control of modules
