audio/gmpc: Fix buffer overflow in bacon-message-connection.c
git-svn-id: https://svn.macports.org/repository/macports/trunk@71666 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/gmpc/Portfile
+++ b/dports/audio/gmpc/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name            gmpc
 version         0.20.0
-revision        2
+revision        3
 categories      audio
 platforms       darwin
 maintainers     raimue \
@@ -33,6 +33,13 @@ depends_lib     port:libmpd \
                 port:openssl \
                 port:curl \
                 port:libsoup
+
+patchfiles      patch-bacon-buffer-overflow.diff
+
+post-patch {
+    # restore timestamp to avoid rebuilding .vala source files
+    system "cd ${worksrcpath} && touch -r src/bacon/bacon-message-connection.h src/bacon/bacon-message-connection.c"
+}
 
 configure.args  --disable-macige
 
