pango: update to 1.28.3 and fix universal issues by not using muniversal (#26697). The current CoreText/ATSUI back end builds OK on both 64-bit and Tiger.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72474 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/pango/Portfile
+++ b/dports/x11/pango/Portfile
@@ -2,19 +2,18 @@
 # $Id$
 
 PortSystem              1.0
-PortGroup               muniversal 1.0
 PortGroup               archcheck 1.0
 
 name                    pango
 conflicts               pango-devel
 epoch                   1
-version                 1.24.5
+version                 1.28.3
 set branch              [join [lrange [split ${version} .] 0 1] .]
 categories              x11
 maintainers             ryandesign
 license                 LGPLv2
 homepage                http://www.pango.org/
-master_sites            gnome:sources/pango/${branch}
+master_sites            gnome:sources/${name}/${branch}
 platforms               darwin
 use_bzip2               yes
 use_parallel_build      yes
@@ -28,9 +27,9 @@ long_description \
     of internationalized text.
 
 checksums \
-    md5     815416a452e9cccc172fed9862401f37 \
-    sha1    a5aa40b78546a7ee59f21804b172e5d47ef776ad \
-    rmd160  7e436752734c55950ad5feced7c7d5c3f040a1b4
+    md5     caa74baea47e7e16bc73c89f9089d522 \
+    sha1    e72887d6e147b9abf54628c003836e61d97767a1 \
+    rmd160  cdfd6d695b169e15801956fbfd54438c109f7a61
 
 depends_build \
     port:pkgconfig
@@ -45,14 +44,11 @@ archcheck.files         lib/libglib-2.0.dylib \
                         lib/libcairo.dylib
 
 patchfiles \
-    patch-which.diff \
-    patch-ltmain.sh.diff \
-    patch-configure.diff
+    patch-ltmain.sh.diff
 
 configure.ccache        no
 
-platform macosx {}
-if { ([variant_isset macosx] || ([info exists os.subplatform] && ${os.subplatform} == "macosx"))} {
+platform macosx {
 variant quartz {
     # Although this variant does nothing, pango will automatically build
     # itself differently depending on whether or not cairo is installed with
@@ -69,7 +65,7 @@ pre-configure {
         return -code error "incompatible glib2 version"
     }
     
-    set cairo_minimum_version 1.7.4
+    set cairo_minimum_version 1.7.6
     set cairo_installed_version [exec pkg-config cairo --modversion]
     if {[rpm-vercomp ${cairo_installed_version} ${cairo_minimum_version}] < 0} {
         ui_error "${name} ${version} requires cairo ${cairo_minimum_version} or later but you have cairo ${cairo_installed_version}."
@@ -103,23 +99,14 @@ pre-configure {
     }
 }
 
-lappend merger_configure_args(ppc64)   have_atsui=false
-lappend merger_configure_args(x86_64)  have_atsui=false
-
-configure.cppflags-append \
-    -no-cpp-precomp
-
 configure.ldflags-append \
     -no-undefined \
     -bind_at_load
 
 configure.args \
     --enable-static \
+    --disable-introspection \
     --x-include=${prefix}/include --x-lib=${prefix}/lib
-
-if {![variant_isset universal] && $build_arch == "x86_64" || $build_arch == "ppc64"} {
-    configure.args-append have_atsui=false
-}
 
 variant no_x11 {
     depends_lib-delete \
