glib2, glib2-devel, pango, pango-devel: openmaintainer
git-svn-id: https://svn.macports.org/repository/macports/trunk@72702 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/pango-devel/Portfile
+++ b/dports/x11/pango-devel/Portfile
@@ -11,7 +11,7 @@ set my_name             pango
 version                 1.27.1
 set branch              [join [lrange [split ${version} .] 0 1] .]
 categories              x11
-maintainers             ryandesign
+maintainers             ryandesign openmaintainer
 license                 LGPLv2
 homepage                http://www.pango.org/
 master_sites            gnome:sources/${my_name}/${branch}
