--- a/dports/x11/pango/Portfile
+++ b/dports/x11/pango/Portfile
@@ -10,7 +10,7 @@ epoch                   1
 version                 1.28.3
 set branch              [join [lrange [split ${version} .] 0 1] .]
 categories              x11
-maintainers             ryandesign
+maintainers             ryandesign openmaintainer
 license                 LGPLv2
 homepage                http://www.pango.org/
 master_sites            gnome:sources/${name}/${branch}
