libsdl_pango: autoreconf for universal support (#19474)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73100 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libsdl_pango/Portfile
+++ b/dports/devel/libsdl_pango/Portfile
@@ -21,3 +21,6 @@ checksums	  sha1 c30f2941d476d9362850a150d29cb4a93730af68 \
 depends_lib	  path:lib/pkgconfig/sdl.pc:libsdl port:fontconfig path:lib/pkgconfig/pango.pc:pango
 
 patchfiles	  patch-SDL_Pango-0.1.2-API-adds.diff
+
+use_autoreconf  yes
+autoreconf.args -fvi
